// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?Get started                                                                                     │
│                                                                                                  │
│  How would you like to connect Gemini CLI for this project?                                      │
│                                                                                                  │
│  (selected)  (not selected)(not      (not        (not selecte(not selected(not      (not         │
│  Sign in withUse Gemini APIselected) selected)   Local LM    Local        selected) selected)    │
│  Google      Key           Vertex AI Local OllamaStudio      Llama.cpp    Local vLLMLocal SGLang │
│                                                                                                  │
│                                                                                                  │
│  Something went wrong                                                                            │
│                                                                                                  │
│  (Use Enter to select)                                                                           │
│                                                                                                  │
│  Terms of Services and Privacy Notice for Gemini CLI                                             │
│                                                                                                  │
│  https://geminicli.com/docs/resources/tos-privacy/                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?Get started                                                                                     │
│                                                                                                  │
│  How would you like to connect Gemini CLI for this project?                                      │
│                                                                                                  │
│  (selected)  (not selected)(not      (not        (not selecte(not selected(not      (not         │
│  Sign in withUse Gemini APIselected) selected)   Local LM    Local        selected) selected)    │
│  Google      Key           Vertex AI Local OllamaStudio      Llama.cpp    Local vLLMLocal SGLang │
│                                                                                                  │
│                                                                                                  │
│  (Use Enter to select)                                                                           │
│                                                                                                  │
│  Terms of Services and Privacy Notice for Gemini CLI                                             │
│                                                                                                  │
│  https://geminicli.com/docs/resources/tos-privacy/                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? Get started                                                                                    │
│                                                                                                  │
│   How would you like to connect Gemini CLI for this project?                                     │
│                                                                                                  │
│   (selected) Use Gemini API Key                                                                  │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
│   Terms of Services and Privacy Notice for Gemini CLI                                            │
│                                                                                                  │
│   https://geminicli.com/docs/resources/tos-privacy/                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
